[project]
name = "content-bridge"
version = "0.1.0"
description = "Ado 动态自动搬运 Agent（Twitter/X · YouTube · Instagram → Discord · Server酱）"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "uvicorn>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
content-bridge = "content_bridge.main:main"
ado-repost = "ado_repost.main:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
