[project]
name = "shared-mempool"
version = "0.1.0"
description = "Redis 临时层 + SQLite 持久层的共享记忆池 SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[project.optional-dependencies]
redis = [
    "redis>=5.0.0",
]
dev = [
]

[project.scripts]
shared-mempool = "shared_mempool.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
